Bug 1526609 - When interrupting the reflow of abspos kids, still account for the old overflow areas. r=bzbarsky a=lizzard

Otherwise, if we're scrolled, the scroll frame will think that our scroll range
was reduced, which will in turn clamp the scroll position, which is not good.

Differential Revision: https://phabricator.services.mozilla.com/D19362